wrap around IP display correctly

--- a/media/assets/board.css
+++ b/media/assets/board.css
@@ -1,8 +1,3 @@
-body {
-	margin: 0px;
-	padding: 0px;
-}
-
 .board-bg {
 	position: relative;
 	background-image: url('BoardOff.png');
@@ -157,7 +152,7 @@ body {
 	left: 8px;
 
 	color: rgba( 255, 255, 255, 0.45 );
-	font-family: 'LastWordsThin';
+	font-family: 'LastWordsThin', monospace;
 	font-size: 14px;
 }
 
@@ -185,7 +180,7 @@ body {
 
 	white-space: pre;
 
-	font-family: LCDDotRegular;
+	font-family: 'LCDDotRegular', monospace;
 	font-size: 20px;
 	line-height: 24px;
 	word-wrap: break-word;
@@ -193,7 +188,7 @@ body {
 	left: 54px;
 	top: 422px;
 
-	width: 504px;
+	width: 506px;
 	height: 92px;
 
 	margin-top: 4px;
@@ -210,9 +205,9 @@ body {
 .board-chipbox {
 	position: absolute;
 	top: 20px;
-	left: 557px;
+	left: 570px;
 
-	width: 375px;
+	width: 380px;
 	min-height: 300px;
 
 	-webkit-border-radius: 10px;
